--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 60px;
     color: #fff;
     margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 .approach-img {
