--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* CONTACT & COPYRIGHT */
-contact-copyright {
+.contact-copyright {
     font-family: "Montserrat", sans-serif;
     height: 100vh;
     display: flex;
