--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ h1, h2, h3, h4, h5, h6 {
     background: url(assets/experimentvideo.webp);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     width: calc(100vw - 100px);
     height: 100%;
 }
