--- a/style.css
+++ b/style.css
@@ -315,7 +315,10 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     justify-content: center;
     width: calc(100vw - 100px);
-    background-color: #5b5b55;
+    background: url(https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .approach-content {
@@ -348,18 +351,18 @@ h1, h2, h3, h4, h5, h6 {
 } 
 
 .approach h1 {
-    font-size: 74px;
+    font-size: 66px;
     font-weight: 900;
     color: #fff;
     text-transform: uppercase;
     line-height: 1;
-    margin-bottom: -15px;
+    margin-bottom: -12px;
 }
 
 .approach-right {
     position: relative;
     right: 150px;
-    top: 20px;
+    top: 24px;
 }
 
 .approach-right .approach-numbers{
