--- a/style.css
+++ b/style.css
@@ -42,6 +42,22 @@ body.wait-preloader {
     overflow: hidden;
 }
 
+*::selection {
+    background-color: #f9b000;
+    color: #fff;
+}
+
+body::-webkit-scrollbar {
+    display: block;
+    width: 10px;
+    background: #000;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #f9b000;
+    border-radius: 50px;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
